# python-lexer

./: .gitignore  Dockerfile  README.md  lexer_rules.py  main.py  program.txt  pyproject.toml  requirements.txt
src/: expressions.py  helpers.py  lexer_rules.py  main.py  operations.py  parser_rules.py  program.txt
