[tool.poetry]
name = "lexer-lmc"
version = "0.1.0"
description = ""
authors = ["Jonathan Rodriguez Sanchez <jonathan.rodriguezs@softtek.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
